--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^1.0.6",
         "@inertiajs/vue3": "^2.0.0",
         "@vitejs/plugin-vue": "^5.2.1"
     }
