--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^1.0.6",
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0",
         "@vitejs/plugin-vue": "^5.2.1"
     }
