--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@heroicons/vue": "^1.0.6",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0",
-        "@vitejs/plugin-vue": "^5.2.1"
+        "@vitejs/plugin-vue": "^5.2.1",
+        "debounce": "^2.2.0"
     }
 }
