--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0",
         "@vitejs/plugin-vue": "^5.2.1",
-        "debounce": "^2.2.0"
+        "debounce": "^2.2.0",
+        "laravel-precognition-vue-inertia": "^0.5.14"
     }
 }
