--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.7.2",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "vite": "^6.0"
+        "postcss": "^8.4.38",
+        "pusher-js": "^8.4.0-rc2",
+        "tailwindcss": "^3.4.4",
+        "vite": "^5.0"
     },
     "dependencies": {
-        "@headlessui/vue": "^1.7.23",
-        "@heroicons/vue": "^1.0.6",
         "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/vue3": "^2.0.0",
-        "@vitejs/plugin-vue": "^5.2.1",
+        "@inertiajs/vue3": "^1.1.0",
+        "@vitejs/plugin-vue": "^5.0.5",
         "debounce": "^2.2.0",
-        "laravel-precognition-vue-inertia": "^0.5.14"
+        "laravel-precognition": "^0.5.5",
+        "laravel-precognition-vue": "^0.5.5",
+        "laravel-precognition-vue-inertia": "^0.5.5",
+        "vue": "^3.4.31"
     }
 }
