--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "vitest"
     },
     "devDependencies": {
+        "@testing-library/vue": "^8.1.0",
+        "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.19",
         "axios": "^1.7.2",
+        "jsdom": "^25.0.1",
         "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.4",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vitest": "^2.1.8"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
