--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     "outputDirectory": "public",
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "false",
+        "APP_DEBUG": "true",
         "APP_URL": "https://laravel-inertia-jet.vercel.app/",
         "APP_KEY": "base64:TGaVaXwhWgjn9akhE4SCSIjGG/cQqvICUQ+PgLA3Bs0=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
@@ -26,9 +26,10 @@
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
         "DB_CONNECTION": "mysql",
-        "DB_HOST": "4gg.h.filess.io",
-        "DB_PORT": "3306",
-        "DB_DATABASE": "db2024_stormtorn",
-        "DB_USERNAME": "db2024_stormtorn"
+        "DB_HOST": "41drh.h.filess.io",
+        "DB_PORT": "3307",
+        "DB_DATABASE": "laravelinertia_roofevenof",
+        "DB_USERNAME": "laravelinertia_roofevenof",
+        "DB_PASSWORD": "8976e24e8263dc3c7fc99891944d9fcb7ebcf5a7"
     }
 }
